Implement content.css

--- a/entrypoints/content.css
+++ b/entrypoints/content.css
@@ -1,1 +1,46 @@
 @charset "UTF-8";
+
+ytd-watch-flexy {
+  --ylcaa-required-min-height: 360px;
+
+  --ylcaa-masthead-offset: calc(
+    var(--ytd-watch-flexy-masthead-height) +
+    var(--ytd-margin-6x)
+  );
+}
+
+/* Side-by-side chat layout */
+ytd-watch-flexy:not([watch-while-panels-active]):not([theater]) {
+  #secondary {
+    #chat.ytd-watch-flexy:not([collapsed]) {
+      --ylcaa-default-min-height: 596px;
+
+      min-height: clamp(
+        var(--ylcaa-required-min-height),
+        calc(100vh - var(--ylcaa-masthead-offset)),
+        var(--ylcaa-default-min-height)
+      );
+    }
+  }
+}
+
+ytd-watch-flexy:not([watch-while-panels-active]) {
+  #below {
+    #chat.ytd-watch-flexy:not([collapsed]) {
+      min-height: var(--ylcaa-required-min-height);
+
+      --ylcaa-video-player-height: calc(
+        (100vw - var(--ytd-watch-flexy-scrollbar-width)) /
+        var(--ytd-watch-flexy-width-ratio) *
+        var(--ytd-watch-flexy-height-ratio)
+      );
+
+      height: calc(
+        100vh -
+        var(--ylcaa-masthead-offset) -
+        var(--ylcaa-video-player-height) -
+        var(--ytd-margin-6x)
+      );
+    }
+  }
+}
