--- a/src/entrypoints/content.css
+++ b/src/entrypoints/content.css
@@ -19,13 +19,12 @@ ytd-watch-flexy:not([watch-while-panels-active]) {
         var(--ytd-watch-flexy-height-ratio)
       );
 
-      height: clamp(
-        var(--ylcaa-required-min-height),
+      height: min(
         calc(
           100vh -
           var(--ylcaa-masthead-offset) -
           var(--ylcaa-video-player-height) -
-          var(--ytd-margin-6x)
+          var(--ytd-margin-4x)
         ),
         var(--ytd-watch-flexy-chat-max-height)
       );
